src/styles/_queries.scss
.home-content {
    padding: 100px 0;
    height: calc(100vh - 20px);
    display: flex;
    align-items: center;
    justify-content: space-between;

    .content {
        max-width: 1300px;
        margin: auto;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
}

@media (max-width: 991px) { /* Tablets (md to lg) */
    .home-content {
        display: flex;
        align-items: center;
        flex-direction: column-reverse;
        justify-content: center;
        gap: 40px;
        padding: 100px 0;
        height: auto;

        .content {
            max-width: 1300px;
            margin: auto;
            display: flex;
            align-items: center;
            flex-direction: column-reverse;
            justify-content: center;
        }

        .left-content {
            text-align: center;
            padding: 0 20px;
        }
    }
}

